fix: SurveyRepositoryImpl N+1 제거, LocalDate.now()→dateHolder, soft-delete 필터 일관성
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>